--- a/assets/stylesheets/travel.css
+++ b/assets/stylesheets/travel.css
@@ -2,16 +2,27 @@
 Choose a font from google fonts to use for the text in the hero
 and use @import to include in this style sheet. The font in the image is "Bangers"
 */
-
+@import url('https://fonts.googleapis.com/css?family=Bangers');
 
 /*
-- make the masthead a flexbox container
-- make sure the logo displays on the left and the navigation displays on the right using flexbox
-- make sure that the navigation can drop below the logo when the page shrinks using flexbox
-- make sure the content is vertically centered in the masthead using flexbox
-- using the position property, make sure the navigation stays fixed to the top when scrolling
-- when scrolling make sure there is no gap between the masthead and top of the page
+- make the masthead a flexbox container-
+- make sure the logo displays on the left and the navigation displays on the right using flexbox-
+- make sure that the navigation can drop below the logo when the page shrinks using flexbox-
+- make sure the content is vertically centered in the masthead using flexbox-
+- using the position property, make sure the navigation stays fixed to the top when scrolling-
+- when scrolling make sure there is no gap between the masthead and top of the page-
 */
+#masthead {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+}
+#nav-list {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 
 /*
@@ -23,6 +34,15 @@ and use @import to include in this style sheet. The font in the image is "Banger
 - add a black dropshadow to the text with a 2px offset
 - adjust the top margin of the hero to account for the fixed masthead
 */
+#hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Bangers', cursive;
+  text-shadow: 2px 2px black;
+  margin-top: 50px;
+}
 
 
 /*
@@ -31,7 +51,12 @@ and use @import to include in this style sheet. The font in the image is "Banger
 - reverse the order of the cards using flexbox (should become chili aruna italy spain)
 - make sure when the page shrinks the cards wrap and stack on eachother
 */
-
+#cards {
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+}
 
 /*
 - Make each individual card a flexbox container
@@ -40,6 +65,14 @@ and use @import to include in this style sheet. The font in the image is "Banger
 - make sure the information in the card is at the bottom of the card using flexbox
   (there is bottom padding applied in common.css to keep it off the very bottom so it looks right)
 */
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+
 
 
 /*
@@ -47,21 +80,39 @@ and use @import to include in this style sheet. The font in the image is "Banger
 - using flexbox make sure the content is stacked and not in a row
 - make sure the content is centered in each card using flexbox
 */
-
+#travel-table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 /*
 - Make the footer div a flexbox container
 - make sure the copyright displays on the left and the social links display on the right using flexbox
 - make sure the content is vertically centered in the here div using flexbox
 */
-
+#footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 /*
 MEDIUM CHALLENGE:
-Using media queries, hide the national bird column in the table when the screen is at a 
+Using media queries, hide the national bird column in the table when the screen is at a
 max width of 800px. Hide both the national bird and population column when the
 screen is at a max width of 600px
 
 HINT:
-leverage the classes .bird and .population 
+leverage the classes .bird and .population
 */
+@media (max-width: 800px) {
+  .bird {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .population {
+    display: none;
+  }
+}
